<resources>
    <string name="app_name">Star Wars</string>
    <string name="choose_your_side">ESCOLHER O LADO DA FORÇA, VOCÊ DEVERÁ…</string>
    <string name="powered">Powered by: George Lucas</string>
    <string name="search">Buscar...</string>
    <string name="search_spaceships">Buscar ESPAÇONAVES</string>
    <string name="search_planets">Buscar PLANETAS</string>
    <string name="search_characters">Buscar PERSONAGENS</string>
    <string name="search_random">Busca ALEATÓRIA</string>
    <string name="settings">CONFIGURAÇÕES</string>
    <string name="sound">REPRODUZIR SOM CLÁSSICO DO FILME</string>
    <string name="spaceships">ESPAÇONAVES</string>
    <string name="planets">PLANETAS</string>
    <string name="characters">PERSONAGENS</string>
    <string name="starship_hint">Ex.: Star Destroyer</string>
    <string name="hint">Ex.: Yavin IV</string>
    <string name="title_failure">ENCONTRADO,\nNADA FOI.</string>
    <string name="list_type">TIPO DE LISTA NA HOME</string>
    <string name="grid">GRID</string>
    <string name="list">LISTA</string>
    <string name="language">IDIOMA DO APP</string>
    <string name="portuguese">PORTUGUÊS(BR)</string>
    <string name="english">INGLÊS</string>
    <string name="russian">RUSSO</string>
    <string name="restart">Reinicie o aplicativo</string>
    <string name="more">Carregar mais resultados</string>
    <string name="end">Fim da lista</string>

    <!-- Bottom Sheet -->
    <string name="choose_wisely">ESCOLHA SABIAMENTE...</string>
    <string name="search_all">Buscar tudo</string>
    <string name="search_by_name">Buscar por nome</string>
    <string name="playing_sound">REPRODUZINDO SOM...</string>
    <string name="stop_music">PARAR MÚSICA</string>

    <!-- Fragment -->
    <string name="results">Resultados: %d</string>
    <string name="name"><![CDATA[<b>Nome:</b>]]> %s</string>
    <string name="crew"><![CDATA[<b>Tripulação:</b>]]> %s</string>
    <string name="passengers"><![CDATA[<b>Passageiros:</b>]]> %s</string>
    <string name="height"><![CDATA[<b>Altura:</b>]]> %s</string>
    <string name="eyes_color"><![CDATA[<b>Cor dos olhos:</b>]]> %s</string>
    <string name="population"><![CDATA[<b>População:</b>]]> %s</string>
    <string name="diameter"><![CDATA[<b>Diâmetro:</b>]]> %s</string>
</resources>