<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/bg_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_icon_ionic_md_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/krungthep"
            android:text="@string/settings"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/list_type"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_logo" />

    <GridLayout
        android:id="@+id/gl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_grid_1"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" >

            <ImageView
                android:id="@+id/circle_1"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/circle_orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/krungthep"
                android:text="@string/grid"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/circle_1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_grid_2"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" >

            <ImageView
                android:id="@+id/circle_2"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/circle_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/krungthep"
                android:text="@string/list"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/circle_2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

    <TextView
        android:id="@+id/text_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/language"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_1" />

    <GridLayout
        android:id="@+id/gl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_language"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_grid_3"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" >

            <ImageView
                android:id="@+id/circle_3"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/circle_orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/krungthep"
                android:text="@string/portuguese"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/circle_3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_grid_4"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" >

            <ImageView
                android:id="@+id/circle_4"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/circle_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/krungthep"
                android:text="@string/english"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/circle_4"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_grid_5"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" >

            <ImageView
                android:id="@+id/circle_5"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/circle_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/krungthep"
                android:text="@string/russian"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/circle_5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>